# Hush-Engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  Hush.sln  Pipfile  README.md  requirements.txt  test.sln  unamed-engine.sln  vcpkg-configuration.json  vcpkg.json
.github/: ci.yml
.github/workflows/: ci-devtool.yml  ci.yml  clang-tidy.yml
docs/: developing.md
docs/doxygen/html/: _lib_manager_8hpp_source.html  _logger_8hpp_source.html  _scripting_manager_8hpp_source.html  _string_utils_8hpp_source.html  annotated.html  class_lib_manager-members.html  class_lib_manager.html  class_scripting_manager-members.html  class_scripting_manager.html  class_string_utils-members.html  class_string_utils.html  (+25 more)
docs/source/: conf.py  index.rst
res/: test_shader.comp
scripts/: bootstrap.ps1  bootstrap.sh  devtool  devtool.ps1  devtool.py  requirements.txt  run-clang-tidy.py
scripts/templates/: .cmake  .cpp  .cs  .hpp  .py
src/: CMakeLists.txt  utils.hpp
src/coreclr-embedding-test/: CMakeLists.txt
src/coreclr-embedding-test/assembly-test/: Class1.cs  StringExtensions.cs  assembly-test.csproj  assembly-test.sln
src/coreclr-embedding-test/src/: DotnetHost.cpp  DotnetHost.hpp  ScriptingManager.cpp  ScriptingManager.hpp  main.cpp
src/coreclr-embedding-test/src/utils/: LibManager.cpp  LibManager.hpp  StringUtils.cpp  StringUtils.hpp
src/devtool/: Cargo.toml
src/editor/: CMakeLists.txt  imgui.ini
src/editor/assembly-test/: ApiTest.cs  StringExtensions.cs
src/editor/src/: ContentPanel.cpp  ContentPanel.hpp  DebugUI.hpp  EditorApp.cpp  HierarchyPanel.cpp  HierarchyPanel.hpp  IEditorPanel.hpp  ScenePanel.hpp  TitleBarMenuPanel.cpp  TitleBarMenuPanel.hpp  UI.cpp  UI.hpp
src/engine_core/: CMakeLists.txt  imgui.ini
src/engine_core/app_loader/: CMakeLists.txt
src/engine_core/app_loader/internal/: AppSupport.hpp
src/engine_core/app_loader/src/: ApplicationLoader.cpp  ApplicationLoader.hpp  IApplication.cpp  IApplication.hpp
src/engine_core/assembly-test/: Class1.cs  assembly-test.csproj  assembly-test.sln
src/engine_core/cmake/: deps.cmake  utils.cmake
src/engine_core/input/: CMakeLists.txt
src/engine_core/input/src/: InputManager.cpp  InputManager.hpp
src/engine_core/log/: CMakeLists.txt
src/engine_core/log/src/: Logger.hpp
src/engine_core/rendering/: CMakeLists.txt
src/engine_core/rendering/src/: Renderer.hpp  WindowManager.hpp  WindowRenderer.cpp  WindowRenderer.hpp
src/engine_core/rendering/src/ImGui/: IImGuiForwarder.hpp  VulkanImGuiForwarder.cpp  VulkanImGuiForwarder.hpp
src/engine_core/rendering/src/Shared/: Camera.cpp  MaterialDefinitions.hpp
src/engine_core/rendering/src/Vulkan/: FrameData.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkTypes.hpp  VkUtilsFactory.hpp  VulkanDeletionQueue.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/engine_core/scripting/: CMakeLists.txt
src/engine_core/scripting/src/: DotnetHost.cpp  DotnetHost.hpp  ScriptingManager.cpp  ScriptingManager.hpp
src/engine_core/src/: DotnetHost.cpp  DotnetHost.hpp  HushEngine.cpp  HushEngine.hpp  Logger.hpp  ScriptingManager.cpp  ScriptingManager.hpp  dummy.cpp  main.cpp
src/engine_core/src/editor/: DebugUI.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  IEditorPanel.hpp  MainPanel.cpp  MainPanel.hpp  ScenePanel.cpp  ScenePanel.hpp  TitleBarMenuPanel.cpp  TitleBarMenuPanel.hpp  UI.cpp  UI.hpp
src/engine_core/src/input/: InputManager.cpp  InputManager.hpp  KeyCode.hpp  KeyData.hpp  KeyStates.hpp
src/engine_core/src/input/definitions/: KeyCode.hpp  KeyData.hpp  MouseButton.hpp  MouseData.hpp
src/engine_core/src/log/: Logger.cpp  Logger.hpp
src/engine_core/src/rendering/: Renderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  WindowManager.hpp  WindowRenderer.cpp  WindowRenderer.hpp
src/engine_core/src/rendering/ImGui/: IImGuiForwarder.hpp  VulkanImGuiForwarder.cpp  VulkanImGuiForwarder.hpp
src/engine_core/src/rendering/Shared/: Camera.hpp  Colors.cpp  Colors.hpp  MaterialDefinitions.hpp  RenderObject.cpp  RenderObject.hpp  RenderStats.hpp
src/engine_core/src/rendering/Vulkan/: FrameData.hpp  GltfMetallicRoughness.cpp  GltfMetallicRoughness.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkOperations.cpp  VkOperations.hpp  VkTypes.hpp  VkUtilsFactory.hpp  VulkanDeletionQueue.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp  vk_mem_alloc.hpp
src/engine_core/src/scripting/: DotnetHost.cpp  DotnetHost.hpp  ScriptingManager.cpp  ScriptingManager.hpp
src/engine_core/src/utils/: Assertions.hpp  EnumUtils.hpp  LibManager.cpp  LibManager.hpp  Platform.hpp  Result.hpp  StringUtils.cpp  StringUtils.hpp
src/engine_core/src/utils/filesystem/: PathUtils.cpp  PathUtils.hpp
src/engine_core/src/utils/networking/: NetworkUtils.hpp
src/engine_core/src/utils/threading/: ThreadingUtils.hpp
src/engine_core/src/utils/typeutils/: TypeUtils.hpp
src/engine_core/utils/: CMakeLists.txt
src/engine_core/utils/src/: Assertions.hpp  LibManager.hpp  Platform.hpp  Result.hpp  SharedLibrary.cpp  SharedLibrary.hpp  StringUtils.cpp
src/engine_core/utils/src/filesystem/: PathUtils.cpp  PathUtils.hpp
src/engine_core/utils/src/networking/: NetworkUtils.hpp
src/engine_core/utils/src/typeutils/: TypeUtils.hpp
src/unnamed-engine/: CMakeLists.txt
src/unnamed-engine/assembly-test/: StringExtensions.cs  assembly-test.csproj  assembly-test.sln
src/unnamed-engine/cmake/: libs.cmake
src/unnamed-engine/include/core/: Logger.hpp
src/unnamed-engine/include/core/log/: Logger.hpp
src/unnamed-engine/include/core/scripting/: DotnetHost.hpp  ScriptingManager.hpp
src/unnamed-engine/include/core/utils/: LibManager.hpp  StringUtils.hpp
src/unnamed-engine/src/: main.cpp
src/unnamed-engine/src/core/log/: Logger.cpp
src/unnamed-engine/src/core/scripting/: DotnetHost.cpp  ScriptingManager.cpp
src/unnamed-engine/src/core/utils/: LibManager.cpp  StringUtils.cpp
(+42 files in other folders)
